# wt-labs

./: LICENSE  Makefile  pyproject.toml
lab1/: Dockerfile  main.py  pyproject.toml  test_main.py
lab2/: Dockerfile  task3_nested.py  task5_longest.py  task_01.py  task_02.py  task_03.py  task_04.py  task_additional_01.py  task_additional_02.py  test_task1.py  test_task2.py  test_task3.py  test_task4.py  test_task5.py  test_task_01.py  test_task_02.py  test_task_03.py  test_task_04.py  test_task_05.py  test_task_additional_01.py  test_task_additional_02.py
